feat: refactor Excel global semantic recognition