@@ -1,7 +1,9 @@
 package com.jsd.aird.tpl.infrastructure;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
+import java.io.IOException;
 import java.net.InetSocketAddress;
 import java.nio.charset.StandardCharsets;
 import java.util.UUID;
@@ -18,101 +20,48 @@ class OpenAiCompatibleRecognitionClientTest {
 
     private final ObjectMapper objectMapper = new ObjectMapper();
     private final OpenAiCompatibleRecognitionClient client = new OpenAiCompatibleRecognitionClient(
-            objectMapper,
-            new JsonCanonicalizer(objectMapper),
-            "https://example.test/v1",
-            "test-key",
-            "test-model",
-            0.5
+            objectMapper, new JsonCanonicalizer(objectMapper),
+            "https://example.test/v1", "test-key", "test-model", 1.5
     );
 
     @Test
-    void keepsOnlyValidXlsxSuggestions() throws Exception {
-        var response = objectMapper.readTree("""
-                {
-                  "suggestions": [
-                    {
-                      "fieldCode": "PROCESS.TEMPERATURE",
-                      "fieldName": "反应温度",
-                      "dataPath": "/process/temperature",
-                      "valueType": "number",
-                      "required": true,
-                      "role": "FIELD",
-                      "locatorType": "CELL_RANGE",
-                      "locator": {"sheetId": "sheet-1", "sheetName": "测试", "address": "B6"},
-                      "confidence": 0.91,
-                      "evidence": [{"label": "反应温度"}],
-                      "reason": "标签明确"
-                    },
-                    {
-                      "fieldCode": "INVALID FIELD",
-                      "fieldName": "无效字段",
-                      "dataPath": "not-a-pointer",
-                      "valueType": "string",
-                      "locatorType": "CELL_RANGE",
-                      "locator": {"address": "unknown"},
-                      "confidence": 2
-                    }
-                  ]
-                }
-                """);
+    void rejectsUnknownEnumsExtraFieldsAndInventedCoordinates() throws Exception {
+        var facts = physicalFacts();
+        var unknownEnum = validResponse().deepCopy();
+        ((com.fasterxml.jackson.databind.node.ObjectNode) unknownEnum.path("businessBlocks").get(0))
+                .put("type", "FIELD_GROUP");
+        assertThatThrownBy(() -> client.validateResponse(unknownEnum, facts))
+                .isInstanceOf(GlobalSemanticRecognitionProtocol.ProtocolViolationException.class)
+                .hasMessageContaining("未知枚举");
 
-        var suggestions = client.parseSuggestions(response, TemplateFormat.XLSX);
+        var extra = validResponse().deepCopy();
+        ((com.fasterxml.jackson.databind.node.ObjectNode) extra).put("fieldCode", "MODEL.MUST.NOT.SET");
+        assertThatThrownBy(() -> client.validateResponse(extra, facts))
+                .hasMessageContaining("协议未定义字段");
 
-        assertThat(suggestions).hasSize(1);
-        assertThat(suggestions.getFirst().payload().path("fieldCode").asText())
-                .isEqualTo("PROCESS.TEMPERATURE");
-        assertThat(suggestions.getFirst().confidence()).isEqualTo(0.91);
+        var invented = validResponse().deepCopy();
+        ((com.fasterxml.jackson.databind.node.ObjectNode) invented.path("fieldRelations").get(0))
+                .put("valueRange", "Z99");
+        assertThatThrownBy(() -> client.validateResponse(invented, facts))
+                .hasMessageContaining("超出工作表使用范围");
     }
 
     @Test
-    void wordSuggestionRequiresAnExistingTextQuoteInsteadOfInventedMarker() throws Exception {
-        var response = objectMapper.readTree("""
-                {
-                  "suggestions": [
-                    {
-                      "fieldCode": "PRODUCT.NAME",
-                      "fieldName": "产品名称",
-                      "dataPath": "/product/name",
-                      "valueType": "string",
-                      "role": "FIELD",
-                      "locatorType": "TEXT_QUOTE",
-                      "locator": {"quote": "产品名称"},
-                      "confidence": 0.8
-                    },
-                    {
-                      "fieldCode": "PRODUCT.CODE",
-                      "fieldName": "产品编码",
-                      "dataPath": "/product/code",
-                      "valueType": "string",
-                      "role": "FIELD",
-                      "locatorType": "CONTENT_CONTROL_TAG",
-                      "locator": {"markerId": "invented"},
-                      "confidence": 0.9
-                    }
-                  ]
-                }
-                """);
-
-        assertThat(client.parseSuggestions(response, TemplateFormat.DOCX))
-                .singleElement()
-                .satisfies(suggestion -> assertThat(suggestion.payload().path("locatorType").asText())
-                        .isEqualTo("TEXT_QUOTE"));
-    }
-
-    @Test
-    void sendsAndAuditsTheSameSanitizedPayloadWithUsageMetrics() throws Exception {
+    void sendsJsonSchemaAtZeroTemperatureAndAuditsSanitizedUsage() throws Exception {
         var captured = new AtomicReference<String>();
         var server = HttpServer.create(new InetSocketAddress("127.0.0.1", 0), 0);
         server.createContext("/v1/chat/completions", exchange -> {
             captured.set(new String(exchange.getRequestBody().readAllBytes(), StandardCharsets.UTF_8));
-            var response = """
-                    {"choices":[{"message":{"content":"{\\"suggestions\\":[]}"}}],
-                     "usage":{"prompt_tokens":120,"completion_tokens":8,"total_tokens":128}}
-                    """.getBytes(StandardCharsets.UTF_8);
+            var content = objectMapper.writeValueAsString(validResponse());
+            var response = objectMapper.createObjectNode();
+            response.set("choices", objectMapper.createArrayNode().add(objectMapper.createObjectNode()
+                    .set("message", objectMapper.createObjectNode().put("content", content))));
+            response.set("usage", objectMapper.createObjectNode()
+                    .put("prompt_tokens", 120).put("completion_tokens", 80).put("total_tokens", 200));
+            var bytes = objectMapper.writeValueAsBytes(response);
             exchange.getResponseHeaders().add("Content-Type", "application/json");
-            exchange.sendResponseHeaders(200, response.length);
-            exchange.getResponseBody().write(response);
+            exchange.sendResponseHeaders(200, bytes.length);
+            exchange.getResponseBody().write(bytes);
             exchange.close();
         });
         server.start();
@@ -120,25 +69,59 @@ class OpenAiCompatibleRecognitionClientTest {
             var localClient = new OpenAiCompatibleRecognitionClient(
                     objectMapper, new JsonCanonicalizer(objectMapper),
                     "http://127.0.0.1:" + server.getAddress().getPort() + "/v1",
-                    "sk-should-never-be-audited", "qwen-plus", 0.5
+                    "sk-should-never-be-audited", "qwen-plus", 1.9
             );
-            var structure = objectMapper.readTree("""
-                    {"structureVersion":4,"contact":"13812345678","sheets":[],
-                     "region":{"regionId":"region-1","address":"A1:B2"},"regions":[]}
-                    """);
+            var facts = physicalFacts();
+            ((com.fasterxml.jackson.databind.node.ObjectNode) facts).put("contact", "13812345678");
             var batch = localClient.recognize(new RecognitionModelClient.RecognitionRequest(
                     UUID.randomUUID(), UUID.randomUUID(), TemplateFormat.XLSX,
-                    "测试.xlsx", "region-1", structure
+                    "测试.xlsx", "workbook-global", facts
             ));
 
+            var sent = objectMapper.readTree(captured.get());
+            assertThat(sent.path("temperature").asDouble()).isZero();
+            assertThat(sent.path("response_format").path("type").asText()).isEqualTo("json_schema");
+            var schema = sent.path("response_format").path("json_schema").path("schema");
+            for (var definition : java.util.List.of(
+                    "annotation", "block", "relation", "column", "table", "issue"
+            )) {
+                assertThat(schema.path("$defs").path(definition).path("required").size())
+                        .isEqualTo(schema.path("$defs").path(definition).path("properties").size());
+            }
             assertThat(captured.get()).doesNotContain("13812345678", "sk-should-never-be-audited")
                     .contains("[REDACTED_PHONE]");
-            assertThat(objectMapper.readTree(captured.get())).isEqualTo(batch.callTrace().requestPayload());
-            assertThat(batch.callTrace().promptTokens()).isEqualTo(120);
-            assertThat(batch.callTrace().completionTokens()).isEqualTo(8);
-            assertThat(batch.callTrace().totalTokens()).isEqualTo(128);
+            assertThat(batch.suggestions()).extracting(RecognitionModelClient.ModelSuggestion::suggestionType)
+                    .contains("SEMANTIC_MODEL", "SCALAR_FIELD");
+            assertThat(batch.callTrace().totalTokens()).isEqualTo(200);
         } finally {
             server.stop(0);
         }
+    }
+
+    private com.fasterxml.jackson.databind.node.ObjectNode physicalFacts() throws IOException {
+        return (com.fasterxml.jackson.databind.node.ObjectNode) objectMapper.readTree("""
+                {"structureVersion":6,"sheets":[{"id":"sheet-1","name":"生产单","usedRange":"A1:L30"}]}
+                """);
+    }
+
+    private com.fasterxml.jackson.databind.node.ObjectNode validResponse() throws IOException {
+        return (com.fasterxml.jackson.databind.node.ObjectNode) objectMapper.readTree("""
+                {
+                  "recognitionProtocolVersion":1,
+                  "semanticAnnotations":[
+                    {"sheetId":"sheet-1","range":"A1:L2","role":"DOCUMENT_TITLE","temporaryBlockRef":"b1"},
+                    {"sheetId":"sheet-1","range":"A5","role":"FIELD_LABEL","temporaryRelationRef":"r1","temporaryBlockRef":"b1"},
+                    {"sheetId":"sheet-1","range":"B5:D5","role":"FIELD_VALUE","temporaryRelationRef":"r1","temporaryBlockRef":"b1"}
+                  ],
+                  "businessBlocks":[
+                    {"temporaryId":"b1","sheetId":"sheet-1","range":"A1:L6","type":"FORM_FIELDS","businessName":"基础信息","groupNameSuggestion":"基础信息"}
+                  ],
+                  "fieldRelations":[
+                    {"temporaryId":"r1","sheetId":"sheet-1","labelRange":"A5","valueRange":"B5:D5","relationType":"LABEL_VALUE","businessName":"产品名称","blockTemporaryId":"b1","groupNameSuggestion":"基础信息","valueType":"string","required":true,"editability":"EDITABLE","valueSource":"USER_INPUT"}
+                  ],
+                  "tables":[],
+                  "qualityIssues":[]
+                }
+                """);
     }
 }
